--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "concurrently": "^6.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.2.2",
+    "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^2.1.3",
     "sass": "^1.45.0",
